--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-registrar-participantes/form-registrar-participantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-registrar-participantes/form-registrar-participantes.component.html
@@ -5,9 +5,16 @@
     </a>
   </div>
   <div class="text-center">
-    <h1 class="title-menu--h1">Registrar participantes de la sesión {{ objetoComiteTecnico.numeroComite }}</h1>
+    <h1 class="title-menu--h1">
+      <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+          Ver detalle participantes de la sesión {{ objetoComiteTecnico.numeroComite }}
+      </ng-container>
+      <ng-template #noEsVerDetalle>
+          {{ esRegistroNuevo === true ? 'Registrar' : 'Ver detalle/Editar' }} participantes de la sesión {{ objetoComiteTecnico.numeroComite }}
+      </ng-template>
+    </h1>
   </div>
-  <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+  <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()" *ngIf="esVerDetalle !== true">
     <div class="row px-5em mt-2em mb-2em">
       <div class="pr-1">
         <label
@@ -211,12 +218,46 @@
       </button>
     </div>
   </form>
-
+  <div *ngIf="esVerDetalle === true">
+    <div class="row px-miembros mt-2em mb-2em">
+      <div class="pr-1">
+        <label
+          class="label-left">
+          Miembros participantes: <span>{{ miembros }} </span>
+        </label>
+      </div>
+    </div>
+    <mat-card class="shipping-card var-main-gris" >
+      <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text"> Invitados </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+          <div *ngFor="let invitado of invitados.controls; let i = index">
+            <mat-card-title class="header-card--text alineacion-titulos2 pl-0"> Invitado {{ i + 1 }} </mat-card-title>
+            <div class="row">
+              <div class="pr-1">
+                <p><strong>Nombre Invitado:</strong>{{ invitado.get('nombre').value }}</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="pr-1">
+                <p><strong>Cargo:</strong>{{ invitado.get('cargo').value }}</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="pr-1">
+                <p><strong>Entidad:</strong>{{ invitado.get('entidad').value }}</p>
+              </div>
+            </div>
+          </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
   <div
     class="text-center"
     *ngIf="objetoComiteTecnico.sesionParticipante && objetoComiteTecnico.sesionParticipante.length > 0"
   >
-    <p class="info-container">
+    <p *ngIf="esVerDetalle !== true" class="info-container">
       <span class="info-text sin-diligenciar">Sin diligenciar</span>
       <span class="info-text en-proceso">En proceso</span>
       <span class="info-text completo">Completo</span>
@@ -230,9 +271,9 @@
         <!-- <mat-panel-title class="expansion-style--title completo" > -->
         <mat-panel-title
           class="expansion-style--title"
-          [class.sin-diligenciar]="estadoSolicitudes == this.estadoFormulario.sinDiligenciar"
-          [class.en-proceso]="estadoSolicitudes == this.estadoFormulario.enProceso"
-          [class.completo]="estadoSolicitudes == this.estadoFormulario.completo"
+          [class.sin-diligenciar]="estadoSolicitudes == this.estadoFormulario.sinDiligenciar && esVerDetalle !== true"
+          [class.en-proceso]="estadoSolicitudes == this.estadoFormulario.enProceso && esVerDetalle !== true"
+          [class.completo]="estadoSolicitudes == this.estadoFormulario.completo && esVerDetalle !== true"
         >
           Validación de solicitudes contractuales
         </mat-panel-title>
@@ -247,6 +288,7 @@
       <app-tabla-registrar-validacion-solicitudes-contractiales
         #registrarSolicitudes
         [ObjetoComiteTecnico]="objetoComiteTecnico"
+        [esVerDetalle] = "esVerDetalle"
         (validar)="ngOnInit()"
       >
       </app-tabla-registrar-validacion-solicitudes-contractiales>
@@ -255,9 +297,9 @@
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title
           class="expansion-style--title"
-          [class.sin-diligenciar]="estadoOtrosTemas == this.estadoFormulario.sinDiligenciar"
-          [class.en-proceso]="estadoOtrosTemas == this.estadoFormulario.enProceso"
-          [class.completo]="estadoOtrosTemas == this.estadoFormulario.completo"
+          [class.sin-diligenciar]="estadoOtrosTemas == this.estadoFormulario.sinDiligenciar && esVerDetalle !== true"
+          [class.en-proceso]="estadoOtrosTemas == this.estadoFormulario.enProceso && esVerDetalle !== true"
+          [class.completo]="estadoOtrosTemas == this.estadoFormulario.completo && esVerDetalle !== true"
         >
           Otros temas
         </mat-panel-title>
@@ -269,6 +311,7 @@
         #otrosTemas
         [objetoComiteTecnico]="objetoComiteTecnico"
         [esProposicionesVarios]="false"
+        [esVerDetalle] = "esVerDetalle"
         (validar)="ngOnInit()"
       >
       </app-tabla-registrar-otros-temas>
@@ -277,9 +320,9 @@
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title
           class="expansion-style--title"
-          [class.sin-diligenciar]="estadoProposiciones == this.estadoFormulario.sinDiligenciar"
-          [class.en-proceso]="estadoProposiciones == this.estadoFormulario.enProceso"
-          [class.completo]="estadoProposiciones == this.estadoFormulario.completo"
+          [class.sin-diligenciar]="estadoProposiciones == this.estadoFormulario.sinDiligenciar && esVerDetalle !== true"
+          [class.en-proceso]="estadoProposiciones == this.estadoFormulario.enProceso && esVerDetalle !== true"
+          [class.completo]="estadoProposiciones == this.estadoFormulario.completo && esVerDetalle !== true"
         >
           Proposiciones y varios
         </mat-panel-title>
@@ -291,13 +334,14 @@
         #proposiciones
         [objetoComiteTecnico]="objetoComiteTecnico"
         [esProposicionesVarios]="true"
+        [esVerDetalle] = "esVerDetalle"
         (validar)="ngOnInit()"
       >
       </app-tabla-registrar-otros-temas>
     </mat-expansion-panel>
   </mat-accordion>
 
-  <div class="text-center">
+  <div *ngIf="esVerDetalle !== true" class="text-center">
     <button
       mat-button
       color="warn"
