--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-registrar-validacion-solicitudes-contractiales/tabla-validacion-solicitudes-contractiales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-registrar-validacion-solicitudes-contractiales/tabla-validacion-solicitudes-contractiales.component.html
@@ -10,57 +10,72 @@
 
 <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="tabla text-center">
-    
+
         <ng-container matColumnDef="fecha">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de la solicitud </th>
             <td mat-cell *matCellDef="let element"> <b>{{element.fechaSolicitud | date: 'dd/MM/yyyy'}}</b> </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="numero">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de la solicitud </th>
             <td mat-cell *matCellDef="let element"> {{element.numeroSolicitud}} </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="tipo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de solicitud  </th>
             <td mat-cell *matCellDef="let element"> {{element.tipoSolicitud}} </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="votacion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ¿El tema requería votación? </th>
             <td mat-cell *matCellDef="let element">
-                <div class="col">
-                    <mat-radio-group class="radioInput en-proceso" [(ngModel)]="element.requiereVotacionFiduciario">
-                        <mat-radio-button [value]="true"
-                                          (change)="changeRequiere(true, element)"
-                                          >Sí</mat-radio-button>
-                        <mat-radio-button
-                            [value]="false"
-                            (change)="changeRequiere(false, element)"
-                            [disabled]="element.tipoSolicitudCodigo === '2'"
-                            >
-                        No</mat-radio-button>
-                    </mat-radio-group>
-                    <span class="required-form-group">*</span>
+                <div *ngIf="esVerDetalle === true">
+                  <span *ngIf="element.requiereVotacion === true">Sí</span>
+                  <span *ngIf="element.requiereVotacion !== true">No</span>
+                </div>
+                <div class="col" *ngIf="esVerDetalle !== true">
+                  <mat-radio-group class="radioInput en-proceso" [(ngModel)]="element.requiereVotacionFiduciario">
+                    <mat-radio-button [value]="true" (change)="changeRequiere(true, element)"> Sí </mat-radio-button>
+                    <mat-radio-button
+                      [value]="false"
+                      (change)="changeRequiere(false, element)"
+                      [disabled]="element.tipoSolicitudCodigo === '2'"
+                    >
+                      No
+                    </mat-radio-button>
+                  </mat-radio-group>
+                  <span class="required-form-group">*</span>
                 </div>
             </td>
         </ng-container>
-    
+
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button 
-                    color="accent"  
-                    class="btn-table " 
+                <button
+                    *ngIf="esVerDetalle !== true"
+                    mat-raised-button
+                    color="accent"
+                    class="btn-table "
                     (click)="openDialogValidacionSolicitudes( element )"
-                    [class.info-button]="element.requiereVotacionFiduciario"
-                    [class.sin-diligenciar]="!element.completo && element.requiereVotacionFiduciario"
-                    [class.completo]="element.completo && element.requiereVotacionFiduciario" 
+                    [class.info-button]="element.requiereVotacionFiduciario && esVerDetalle !== true"
+                    [class.sin-diligenciar]="!element.completo && element.requiereVotacionFiduciario && esVerDetalle !== true"
+                    [class.completo]="element.completo && element.requiereVotacionFiduciario && esVerDetalle !== true"
                     [disabled]="!element.requiereVotacionFiduciario"
                 >Votar</button>
+                <button
+                  *ngIf="esVerDetalle === true"
+                  mat-raised-button
+                  color="accent"
+                  class="btn-table"
+                  (click)="openDialogValidacionSolicitudes(element)"
+                  [disabled]="!element.requiereVotacionFiduciario"
+                >
+                Ver votación
+              </button>
             </td>
         </ng-container>
-    
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
