--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/votacion-solicitud-actualiza_cronograma/votacion-solicitud-actualiza_cronograma.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/votacion-solicitud-actualiza_cronograma/votacion-solicitud-actualiza_cronograma.component.html
@@ -36,11 +36,17 @@
               <!-- <section class="example-section">
                 <mat-checkbox formControlName="aprobacion"></mat-checkbox>
               </section> -->
-              <mat-radio-group class="radioInput" formControlName="aprobacion">
-                <mat-radio-button [value]="true">Sí</mat-radio-button>
-                <mat-radio-button [value]="false">No</mat-radio-button>
-              </mat-radio-group>
-              <span class="required-form-group">*</span>
+              <div *ngIf="data.esVerDetalle === true">
+                <span *ngIf="addressForm.get('aprobacion').value === true">Sí</span>
+                <span *ngIf="addressForm.get('aprobacion').value !== true">No</span>
+              </div>
+              <div *ngIf="data.esVerDetalle !== true">
+                <mat-radio-group class="radioInput" formControlName="aprobacion">
+                  <mat-radio-button [value]="true">Sí</mat-radio-button>
+                  <mat-radio-button [value]="false">No</mat-radio-button>
+                </mat-radio-group>
+                <span class="required-form-group">*</span>
+              </div>
             </td>
             <!-- <td class="mat-cell cdk-cell ng-star-inserted">
               <section class="example-section">
@@ -51,7 +57,7 @@
         </tbody>
       </table>
     </div>
-    
+
 
     <button mat-button color="warn" class="btn-guardar" type="submit">
       <img src="assets/img/icon/guardar.svg" alt="guardar" />
