--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/votacion-solicitud-multiple/votacion-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/votacion-solicitud-multiple/votacion-solicitud-multiple.component.html
@@ -34,11 +34,17 @@
                 <!-- <section class="example-section">
                       <mat-checkbox formControlName="aprobacion"></mat-checkbox>
                     </section> -->
-                <mat-radio-group class="radioInput" formControlName="aprobacion">
-                  <mat-radio-button [value]="true">Sí</mat-radio-button>
-                  <mat-radio-button [value]="false">No</mat-radio-button>
-                </mat-radio-group>
-                <span class="required-form-group">*</span>
+                <div *ngIf="data.esVerDetalle === true">
+                  <span *ngIf="aprobaciones.controls[i].get('aprobacion').value === true">Sí</span>
+                  <span *ngIf="aprobaciones.controls[i].get('aprobacion').value !== true">No</span>
+                </div>
+                <div *ngIf="data.esVerDetalle !== true">
+                  <mat-radio-group class="radioInput" formControlName="aprobacion" required>
+                    <mat-radio-button [value]="true">Sí</mat-radio-button>
+                    <mat-radio-button [value]="false">No</mat-radio-button>
+                  </mat-radio-group>
+                  <span class="required-form-group">*</span>
+                </div>
                 <span class="icon-incompleto">
                   <img
                     class="icon-incompleto--img"
@@ -70,7 +76,7 @@
           [formGroupName]="i"
         >
           <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title completo">
+            <mat-panel-title class="expansion-style--title" [ngClass]="data.esVerDetalle !== true ? 'completo': ''">
               {{ proyecto.value.llaveMen }} - {{ proyecto.value.nombreInstitucion }} - {{ proyecto.value.nombreSede }}
             </mat-panel-title>
           </mat-expansion-panel-header>
@@ -88,7 +94,7 @@
                     {{ observacion.value.nombreParticipante }}
                   </td>
                   <td class="mat-cell cdk-cell ng-star-inserted">
-                    <section class="w-quill">
+                    <section class="w-quill" *ngIf="data.esVerDetalle !== true">
                       <div class="d-flex">
                         <quill-editor
                           class="quill-editor-style card"
@@ -133,6 +139,7 @@
                         </div>
                       </div>
                     </section>
+                    <div *ngIf="data.esVerDetalle === true" [innerHtml]="observacion.get('observacion').value"></div>
                   </td>
                 </tr>
               </tbody>
@@ -141,7 +148,7 @@
         </mat-expansion-panel>
       </mat-accordion>
 
-      <button mat-button color="warn" class="btn-guardar" type="submit">
+      <button mat-button color="warn" class="btn-guardar" type="submit" *ngIf="data.esVerDetalle !== true">
         <img src="assets/img/icon/guardar.svg" alt="guardar" />
       </button>
     </form>
