--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/gestionar-polizas/gestionar-polizas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/gestionar-polizas/gestionar-polizas.component.html
@@ -152,7 +152,7 @@
                   <input  matInput
                           formControlName="fecha"
                           [matDatepicker]="pickerFecha"
-                          [min]="minDate"
+                          [min]="minDateExpedicion"
                           readonly
                           (click)="pickerFecha.open()"
                           required
