--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -167,7 +167,10 @@
           color="accent"
           class="btn-table"
           [disabled]="
-            element.proyecto.estadoProyectoInterventoriaCodigo == null
+            element.proyecto.estadoProyectoInterventoriaCodigo == null||
+            (element.proyecto.estadoProyectoInterventoriaCodigo == 3  && estaEditando)||
+            (element.proyecto.estadoProyectoInterventoriaCodigo == 5  && estaEditando)||
+            (element.proyecto.estadoProyectoInterventoriaCodigo == 7  && estaEditando)
           "
         >
           Observaciones
