--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/detalle-factura-proyectos/detalle-factura-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/detalle-factura-proyectos/detalle-factura-proyectos.component.html
@@ -1,94 +1,60 @@
-<section *ngIf="solicitudPago !== undefined">
+<div class="mt-05em">
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
             <ng-container matColumnDef="llaveMen">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
                 <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.llaveMen }}</b> </td>
             </ng-container>
+
             <ng-container matColumnDef="tipoIntervencion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de intervención </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.tipoIntervencion }} </td>
             </ng-container>
+
             <ng-container matColumnDef="departamento">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Departamento </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.departamento }} </td>
             </ng-container>
+
             <ng-container matColumnDef="municipio">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Municipio </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.municipio }} </td>
             </ng-container>
+
             <ng-container matColumnDef="institucionEducativa">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Institución educativa </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.institucionEducativa }} </td>
             </ng-container>
+
             <ng-container matColumnDef="sede">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.sede }} </td>
             </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <ng-container matColumnDef="validar">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Seleccionar </th>
+                <td mat-cell *matCellDef="let element" align="center">
+                    <section class="example-section">
+                        <mat-checkbox [(ngModel)]="element.check" [disabled]="true"></mat-checkbox>
+                    </section>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumnsMultiProyecto"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumnsMultiProyecto;"></tr>
         </table>
     </div>
 
-    <ng-container *ngIf="esMultiProyecto === true; else noEsMultiProyecto">
-        <form [formGroup]="addressForm">
-            <div style="margin-top: 3em;" *ngIf="projects.length > 0">
-                <div *ngFor="let project of projects.controls; index as i">
-                    <mat-card *ngIf="project.get( 'check' ).value === true" class="shipping-card var-main-gris" [formGroup]="project">
-                        <mat-card-header class="header-card header-card--margin">
-                            <mat-card-title class="header-card--text">
-                                {{ project.get( 'llaveMen' ).value }}
-                            </mat-card-title>
-                        </mat-card-header>
-                        <mat-card-content style="text-align: left;">
-                            <p><strong>Monto máximo a pagar en el proyecto:</strong> {{ project.get( 'valorMaximoProyecto' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
-                            <p><strong>Monto pendiente a pagar en el proyecto:</strong> {{ project.get( 'valorPendienteProyecto' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
-                            <br>
-                            <br>
-                            <div class="d-flex">
-                                <strong>Criterios:</strong>
-                                <p *ngFor="let criterio of project.get( 'criterioPago' ).value; index as i" style="margin-left: .4em;"> {{ criterio.nombre }}<span *ngIf="project.get( 'criterioPago' ).value.length - 1 !== i">,</span><span *ngIf="project.get( 'criterioPago' ).value.length - 1 === i">.</span> </p>
-                            </div>
-                            <section formArrayName="criteriosProyecto" *ngIf="criteriosProyecto( i ).length > 0">
-                                <div  class="mt-1em" *ngFor="let criterioProyecto of criteriosProyecto( i ).controls; index as j" [formGroup]="criterioProyecto">
-                                    <h2>
-                                        <b> {{ criterioProyecto.get( 'nombre' ).value }} </b>
-                                    </h2>
-                                    <p><strong>Valor facturado para el proyecto en el criterio:</strong> ${{ criterioProyecto.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-                                </div>
-                            </section>
-                        </mat-card-content>
-                    </mat-card>
-                </div>
+    <div *ngIf="projects.length > 0">
+        <div *ngFor="let proyecto of projects.controls; index as i">
+            <div *ngIf="proyecto.get( 'check' ).value === true">
+                <app-form-proyecto  [proyecto]="proyecto"
+                                    [contrato]="contrato"
+                                    [listaMenusId]="listaMenusId"
+                                    [registrarSolicitudPagoObs]="registrarSolicitudPagoObs">
+                </app-form-proyecto>
             </div>
-        </form>
-    </ng-container>
-    <ng-template #noEsMultiProyecto>
-        <div style="margin-top: 3em;" *ngIf="proyectos !== undefined && montoMaximo !== undefined">
-            <mat-card class="shipping-card var-main-gris" *ngFor="let proyecto of proyectos">
-                <mat-card-header class="header-card header-card--margin">
-                    <mat-card-title class="header-card--text">
-                        {{ proyecto.llaveMen }}
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content style="text-align: left;">
-                    <p><strong>Monto máximo a pagar en el proyecto:</strong> {{ montoMaximo.valorMaximoProyecto | currency:'':'symbol-narrow':'.0-0' }} </p>
-                    <p><strong>Monto pendiente a pagar en el proyecto:</strong> {{ montoMaximo.valorPendienteProyecto | currency:'':'symbol-narrow':'.0-0' }} </p>
-                    <br>
-                    <div class="d-flex">
-                        <strong>Criterio:</strong>
-                        <section>
-                            <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ filterCriterios( criterio.codigo ) }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
-                        </section>
-                    </div>
-                    <br>
-                    <div *ngFor="let criterio of solicitudPagoFaseCriterio">
-                        <h1><b> {{ filterCriterios( criterio.tipoCriterioCodigo ) }} </b></h1>
-                        <p><strong>Valor facturado para el proyecto en el criterio:</strong> ${{ criterio.valorFacturado | currency:' ':'symbol-narrow':'.0-0' }} </p>
-                        <br>
-                    </div>
-                </mat-card-content>
-            </mat-card>
         </div>
-    </ng-template>
-</section>
+    </div>
+</div>
